	(PokerClientUpgradeFailedTestCase.test01_CheckClientVersionFailedAndNeedUpgrade):
	Added output checks.
	(DryrunUpgradeMockUp): Created mockup.
	(PokerClientDryrunUpgrade): Created test class.
	(PokerClientDryrunUpgrade.setUp): Wrote method.
	(PokerClientDryrunUpgrade.tearDown): Wrote method.
	(PokerClientDryrunUpgrade.test01_dryRunLineTest): Wrote method.

	* tests/testmessages.py: Added import of upgrade to put
	upgrade.CheckClientVersion on the messages list.

	* tests/test-upgrade.py.in (UpgraderMockup.message): Wrote method.
	(PokerSettingsMockupSource.headerGetIn): set verbose return to 6
	(PokerSettingsMockup.headerGetInt): Set verbose to return 6.

	* tests/test-pokerclient.py.in (PokerClientTestCase.setUpClient):
	Added test for delays output from PokerClientFactory.__init__
	(PokerClientTestCase.test23_checkTranslateToFileName): Wrote method.
	(PokerClientTestCase.test24_upgradeReady): Wrote method.
	(PokerClientTestCase.updatePot): Wrote method.
	(PokerClientTestCase.test25_updatePotChipsNoSidePots): Wrote method.
	(PokerClientTestCase.updatePot): Wrote method.
	(PokerClientTestCase.printUserInfo): Added check for
	handleUserInfo output.
	(PokerClientTestCase.test27_playerInfoPacket): Wrote method.
	(PokerClientTestCase.changingURLHandlePacketInfo): Wrote method.
	(PokerClientTestCase.test28_playerInfoPacket): Wrote method.
	(PokerClientTestCase.test30_playerInfoPacketChangingOutfit):
	Adapted method from test28.
	(PokerClientTestCase.test29_playerInfoPacketChangingOutfit):
	Adapated method from test27.
	(PokerClientTestCase.changingOutfitHandlePacketInfo): Adapted
	method from changingURLHandlePacketInfo.
	(PokerClientTestCase.test31_badPlayerObjectSetPlayerDelay): Wrote
	method.
	(PokerClientTestCase.tearDownCheckforConnectionLostMessage): Wrote method.
	(PokerClientTestCase.tearDownClearMessages): Wrote method.
	(PokerClientTestCase.tearDown): Added calls to the two above in callbacks.
	(PokerClientTestCase.setCrashing): Wrote method.